renamed github username in links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <p> Checkout my github if you are interested in cool projects and connect with me on LinkedIn.</p>
 
           <div align="center">
-          <a href="https://github.com/spant" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github" class="img-circle"></a>
+          <a href="https://github.com/spantela" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github" class="img-circle"></a>
           <a href="http://www.linkedin.com/in/stylianipantela/" target="_blank"><img src="img/linkedin.png" alt="twitter" width="120" height="120"></a>
           </div>
         </div>
@@ -129,7 +129,7 @@
           <h1>Projects</h1>
           <div class="row">
             <div class="col-md-4" class="thumbnail">
-              <a href="https://github.com/spant/stelladb" target="_blank" >
+              <a href="https://github.com/spantela/stelladb" target="_blank" >
                 <img src="img/stelladb.png"/>
               </a> <br><br>
               <div class="caption">Stella's DB</div>
@@ -157,7 +157,7 @@
               <div class="caption">VennGroups: Scheduling for large groups made easy</div>
             </div>
             <div class="col-md-4" class="thumbnail">
-              <a href="http://spant.github.io/facebook-visualization/" target="_blank" >
+              <a href="http://spantela.github.io/facebook-visualization/" target="_blank" >
                 <img src="img/fcblikesvisualization.png"/>
               </a> <br><br>
               <div class="caption">Facebook Likes Visualization</div>
@@ -178,7 +178,7 @@
               <div class="caption">GiftGuru</div>
             </div> -->
             <div class="col-md-4" class="thumbnail">
-              <a href="https://github.com/spant/set" target="_blank" >
+              <a href="https://github.com/spantela/set" target="_blank" >
                 <img src="img/set.png"/>
               </a> <br><br>
               <div class="caption">iPhone App for Set</div>
