--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <div align="center">
           <a href="https://github.com/spantela" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github" class="img-circle"></a>
-          <a href="http://www.linkedin.com/in/stylianipantela/" target="_blank"><img src="img/linkedin.png" alt="twitter" width="120" height="120"></a>
+          <a href="http://www.linkedin.com/in/stylianipantela/" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
           </div>
         </div>
 
