about me script

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
         <hr>
         <div class="jumbotron page" id="about_page" hidden>
           <h1>Hi there!</h1>
-          <p class="lead">My name is Stella and I am a rising senior studying Computer Science at Harvard University. I love spending time figuring out how things work, debugging and fixing all the tiny details that make a product bug free and amazing. </p>
-          <p> I serve as the President of the Harvard Hellenic Society that organizes an annual conference of ~50-100 attendants about Innovation in Greece. In addition to that we host weekly brunches as well as traditional greek dancing practices.</p>
-          <p> On the side I enjoy reading, ping pong, theatre, and russian literature. </p>
+          <p class="lead">My name is Stella and I am a rising senior studying Computer Science at Harvard University. This summer I am a software engineering intern at <a href="http://www.wayfair.com/" target="_blank">Wayfair</a> in the Product Catalogue team. </p>
+          <p>I love spending time figuring out how things work, learning new technologies, attending hackathons making programs perfect inside and out.</p>
+          <p> I also serve as the President of the Harvard Hellenic Society that organizes an annual conference of ~50-100 attendants about <a href="http://www.hcs.harvard.edu/~hchs/#conference" target="_blank">Innovation in Greece</a>. In addition to that we host weekly brunches as well as traditional greek dancing practices.</p>
+          <p> On the side I enjoy ping pong, theatre, and russian literature. </p>
           <p> Checkout my github if you are interested in cool projects and connect with me on LinkedIn.</p>
 
           <div align="center">
