--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                   <h4>Software Engineering Intern</h4>
                   <p>Wayfair</p> 
                   <p>Jun 2014 - Present</p> 
+                  <p>Worked on management tools. Created loaders for inserting different types of data in our system while optimizing run times. Worked with MSSQL, PHP, JS, CSS and GIT.<br/>
+                  Won the Most Ingenious award at the Wayfair 2014 Hackathon.<br/>
+                  Named Campus Ambassador for Harvard University for 2014.</p>
                   <!-- <h4>Co-Founder & Lead Software Engineer</h4>
                   <p>GiftGuru</p> 
                   <p>Jan 2014 - Present</p>
@@ -185,6 +188,10 @@
               <div class="caption">iPhone App for Set</div>
             </div>
           </div>
+        </div>
+        <div class="page" id="quotes_page" hidden>
+        In most cases, people, even wicked people, are far more naive and simple-hearted than one generally assumes. And so are we.
+― Fyodor Dostoyevsky, The Brothers Karamazov 
         </div>
         
         <hr>
