--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <hr>
         <div class="jumbotron page" id="about_page" hidden>
           <h1>Hi there!</h1>
-          <p class="lead">My name is Stella and I am a rising senior studying Computer Science at Harvard University. This summer I am a software engineering intern at <a href="http://www.wayfair.com/" target="_blank">Wayfair</a> in the Product Catalogue team. </p>
+          <p class="lead">My name is Stella and I am a rising senior studying Computer Science at Harvard University. In the summer of 2014 I interned as a software engineer at <a href="http://www.wayfair.com/" target="_blank">Wayfair</a> and specifically in the Product Catalogue team. </p>
           <p>I love spending time figuring out how things work, learning new technologies, attending hackathons making programs perfect inside and out.</p>
           <p> I also serve as the President of the Harvard Hellenic Society that organizes an annual conference of ~50-100 attendants about <a href="http://www.hcs.harvard.edu/~hchs/#conference" target="_blank">Innovation in Greece</a>. In addition to that we host weekly brunches as well as traditional greek dancing practices.</p>
           <p> On the side I enjoy ping pong, theatre, and russian literature. </p>
@@ -59,43 +59,35 @@
               <div class="row">
                 <div class="col-md-12">
                   <h3>Tech Experience</h3>
-                  <h4>Software Engineering Intern</h4>
-                  <p>Wayfair</p> 
-                  <p>Jun 2014 - Present</p> 
-                  <p>Worked on management tools. Created loaders for inserting different types of data in our system while optimizing run times. Worked with MSSQL, PHP, JS, CSS and GIT.<br/>
-                  Won the Most Ingenious award at the Wayfair 2014 Hackathon.<br/>
-                  Named Campus Ambassador for Harvard University for 2014.</p>
-                  <!-- <h4>Co-Founder & Lead Software Engineer</h4>
-                  <p>GiftGuru</p> 
-                  <p>Jan 2014 - Present</p>
-                  <p>Developed from scratch a gift recommendation platform that imports likes from social network profiles and generates gifts in e-commerce websites like Amazon. Used Python & Flask and Angular.js. Won the HackBeanPot 2014 Best application to simplify the business of life award, sponsored by Intuit. Named Semi-Finalist for Harvard’s i3 Challenge.</p> -->
-                  <h4>Engineering Researcher</h4>
-                  <p>Harvard University/ Indian Institute of Science</p> 
-                  <p>Jun 2013 - Aug 2013</p>
-                  <p>Performed research for the Medical Innovation for Low-Resource Global Markets group under the supervision of Professor Conor Walsh from Harvard SEAS. Developed a prototype for a low cost, manually operated suction device. Selected for the David Rockefeller Grant.</p>
-                  <h4>CS51 Teaching Fellow</h4>
-                  <p>Department of Computer Science, SEAS</p> 
-                  <p>Jan 2013 - May 2013</p>
-                  <p>Lead weekly 1.5-hour sections, covering functional and object oriented programming, recursion, abstraction, complexity, module and object abstraction, unit testing and design patterns. Graded problem sets and final projects. Staffed office hours.</p>
-                  <h4>Software Engineering Intern</h4>
-                  <p>Vithoulkas Compass</p> 
-                  <p>May 2012 - Jul 2012</p>
-                  <p>Developed features for the web platform using PHP, JS, Ajax, and jQuery. Resolved bugs. Implemented unit tests for the front end using SELENIUM.</p>
-                  <h4>Mathematics Researcher</h4>
-                  <p>Massachusetts Institute of Technology</p> 
-                  <p>Jun 2010 - Aug 2010</p>
-                  <p>Mathematics paper titled “On certain Subsequences of Fibonacci Numbers”, 2010. Received most original paper award at the 2011 ACSTAC (Greek mathematics conference).</p>
+                  <h4>Wayfair <p class="pull-right">Boston, MA.</p></h4>
+                  <p>Software Engineering Intern</p> 
+                  <div>Created four loaders for inserting different types of data in the data system while optimizing run times. Worked with MSSQL, PHP, JS, CSS and GIT. Won the Most Ingenious award at the Wayfair 2014 Hackathon. Named Campus Ambassador for Harvard University for 2014. <strong class="pull-right">Jun 2014 - Aug 2014</strong></div><br>
+                  <h4>GiftGuru <p class="pull-right">Cambridge, MA.</p></h4>
+                  <p>Co-Founder & Lead Software Engineer</p> 
+                  <div>Developed from scratch a gift recommendation platform that imports likes from social network profiles and generates gifts in e-commerce websites like Amazon. Used Python & Flask and Angular.js. Won the HackBeanPot 2014 Best application to simplify the business of life award, sponsored by Intuit. Named Semi-Finalist for Harvard’s i3 Challenge. <strong class="pull-right">Jan 2014 - Present</strong></div><br>
+                  <h4>Harvard/Indian Institute of Science <p class="pull-right">Bangalore, India.</p></h4>
+                  <p>Engineering Researcher</p> 
+                  <div>Performed research for the Medical Innovation for Low-Resource Global Markets group under the supervision of Professor Conor Walsh from Harvard SEAS. Developed a prototype for a low cost, manually operated suction device. Selected for the David Rockefeller Grant. <strong class="pull-right">Jun 2013 - Aug 2013</strong></div><br>
+                  <h4>Department of Computer Science, SEAS <p class="pull-right">Cambridge, MA.</p></h4>
+                  <p>CS51 Teaching Fellow</p> 
+                  <div>Lead weekly 1.5-hour sections, covering functional and object oriented programming, recursion, abstraction, complexity, module and object abstraction, unit testing and design patterns. Graded problem sets and final projects. Staffed office hours. <strong class="pull-right">Jan 2013 - May 2013</strong></div><br>
+                  <h4>Vithoulkas Compass <p class="pull-right">Athens, Greece.</p></h4>
+                  <p>Software Engineering Intern</p> 
+                  <div>Developed features for the web platform using PHP, JS, Ajax, and jQuery. Resolved bugs. Implemented unit tests for the front end using SELENIUM.<strong class="pull-right">May 2012 - Jul 2012</strong></div><br>
+                  <h4>Massachusetts Institute of Technology <p class="pull-right">Cambridge, MA.</p></h4>
+                  <p>Mathematics Researcher</p> 
+                  <div>Mathematics paper titled “On certain Subsequences of Fibonacci Numbers”, 2010. Received most original paper award at the 2011 ACSTAC (Greek mathematics conference). <strong class="pull-right">Jun 2010 - Aug 2010</strong></div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <h3>Other Experience</h3>
-                  <h4>President, Harvard College Hellenic Society.</h4>
-                  <p>Sep 2011 - Present</p>
-                  <p>Introduced a series of talks related to Greece by Harvard Professors. Organized the first Repower Greece Conference hosted at Harvard University (>120 attendants). Revamped the website of the society and raised funds for traditional dance costumes.</p>
-                  <h4>Co-Founder, Crimson Community.</h4>
-                  <p>Jan 2013 - Present</p>
-                  <p>Designed and developed a mental health awareness and access app for the Harvard Community. Using the Twilio API, the app enables easier to access mental health resources and starts to lift the stigma on mental illness.</p>
+                  <h3>Leadership Experience</h3>
+                  <h4>Harvard College Hellenic Society <p class="pull-right">Cambridge, MA.</p></h4>
+                  <p>President</p> 
+                  <div>Introduced a series of talks related to Greece by Harvard Professors. Organized the first Repower Greece Conference hosted at Harvard University (>120 attendants). Revamped the website of the society and raised funds for traditional dance costumes. <strong class="pull-right">Sep 2011 - Present</strong></div>
+                   <h4>Crimson Community <p class="pull-right">Cambridge, MA.</p></h4>
+                  <p>Co-Founder</p> 
+                  <div>Designed and developed a mental health awareness and access app for the Harvard Community. Using the Twilio API, the app enables easier to access mental health resources and starts to lift the stigma on mental illness. <strong class="pull-right">Jan 2013 - Present</strong></div>
                 </div>
               </div>
             </div>
@@ -108,7 +100,26 @@
                   <h4>Harvard University, USA</h4>
                   <p>Sep 2011 - Present</p>
                   <p>A.B. in Computer Science</p>
-                  <p>Courses: Data Systems, Visualization, Computational Systems (Graduate), Compilers, Algorithms, Programming Languages, Probabilities, Theory of Computation, Mobile Engineering, Systems Programming, Data Science, Computer Vision (Graduate), Honors Linear Algebra</p>
+                  <p>Courses:
+                    <ul>
+                        <li>Algorithms and Data Structures (COMPSCI 124)</li>
+                        <li>Programming Languages (COMPSCI 152)</li>
+                        <li>Introduction to the Theory of Computation (COMPSCI 121)</li>
+                        <li>Mobile Software Engineering (COMPSCI 164)</li>
+                        <li>Systems Programming and Machine Organization (COMPSCI 61)</li>
+                        <li>Introduction to Computer Science II (COMPSCI 51)</li>
+                        <li>Introduction to Computer Science I (COMPSCI 50)</li>
+                        <li>Introduction to Probability (STAT110)</li>
+                        <li>Introduction to Electrical Engineering (ES50)</li>
+                        <li>Compilers (COMPSCI 153)</li>
+                        <li>Data Science (COMPSCI 109)</li>
+                        <li>Computer Vision (COMPSCI 283)</li>
+                        <li>Data Systems (COMPSCI 165)</li>
+                        <li>Systems Development for Computational Science (COMPSCI 207)</li>
+                        <li>Visualization (COMPSCI 171)</li>
+                        <li>Honors Linear Algebra and Real Analysis I (MATH 25a)</li>
+                    </ul></p>
+
                   <h4>Costeas-Geitonas School, Greece</h4>
                   <p>Sep 2009 - May 2011</p>
                   <p>International Baccalaureate | Valedictorian</p>
@@ -117,12 +128,12 @@
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <h3>Skills & Hobbies</h3> 
+                  <h3>Skills & Interests</h3> 
                   <p><h4>Programming:</h4> C++, C, Objective-C, Python, PHP, JS, OCaml</p>
                   <p><h4>More Tools:</h4> MySQL, jQuery, GIT, LaTeX, Xcode, MATLAB</p>
                   <p><h4>Languages:</h4> English (fluent), Modern Greek (native), French (working proficiency)</p>
                   <p><h4>Research Interests:</h4>Data Systems, Distributed Systems</p>
-                  <p><h4>Hobbies:</h4>Table tennis, juggling, literature</p>
+                  <p><h4>General Interests:</h4>Technology, Startups, Board games, Literature, Theatre, Table Tennis</p>
                   </div>
               </div>
             </div>
