--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <div class="jumbotron page" id="about_page" hidden>
           <h1>Hi there!</h1>
           <p class="lead">My name is Stella and I am a rising senior studying Computer Science at Harvard University. In the summer of 2014 I interned as a software engineer at <a href="http://www.wayfair.com/" target="_blank">Wayfair</a> and specifically in the Product Catalogue team. </p>
-          <p>I love spending time figuring out how things work, learning new technologies, attending hackathons making programs perfect inside and out.</p>
+          <p>
+          I am extremely passionate about databases and in fact I implemented a modern column store database that supports file loading, column creation, inserts and updates and can be found <a href="https://github.com/spantela/stelladb">here</a>.</p>
+          <p>In general I love spending time figuring out how things work, learning new technologies, attending hackathons making programs perfect inside and out.</p>
           <p> I also serve as the President of the Harvard Hellenic Society that organizes an annual conference of ~50-100 attendants about <a href="http://www.hcs.harvard.edu/~hchs/#conference" target="_blank">Innovation in Greece</a>. In addition to that we host weekly brunches as well as traditional greek dancing practices.</p>
           <p> On the side I enjoy ping pong, theatre, and russian literature. </p>
           <p> Checkout my github if you are interested in cool projects and connect with me on LinkedIn.</p>
