giftuguru added and resume updates

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
         <div class="page" id="resume_page" hidden>
           <div class="row">
-            <div class="col-md-7"> 
+            <div class="col-xs-7"> 
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                   <h3>Tech Experience</h3>
                   <h4>Wayfair <p class="pull-right">Boston, MA.</p></h4>
                   <p>Software Engineering Intern</p> 
@@ -82,7 +82,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                   <h3>Leadership Experience</h3>
                   <h4>Harvard College Hellenic Society <p class="pull-right">Cambridge, MA.</p></h4>
                   <p>President</p> 
@@ -93,33 +93,35 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-1">
+            <div class="col-xs-1">
             </div>
-            <div class="col-md-4"> 
+            <div class="col-xs-4"> 
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                   <h3>Education</h3>
                   <h4>Harvard University, USA</h4>
                   <p>Sep 2011 - Present</p>
                   <p>A.B. in Computer Science</p>
                   <p>Courses:
                     <ul>
+                        <li>Big Data Systems (COMPSCI 265)</li>
+                        <li>Data Systems (COMPSCI 165)</li>
+                        <li>Systems Development for Computational Science (COMPSCI 207)</li>
                         <li>Algorithms and Data Structures (COMPSCI 124)</li>
-                        <li>Programming Languages (COMPSCI 152)</li>
+                        <li>Computational Linguistics (COMPSCI 187)</li>
                         <li>Introduction to the Theory of Computation (COMPSCI 121)</li>
                         <li>Mobile Software Engineering (COMPSCI 164)</li>
+                        <li>Compilers (COMPSCI 153)</li>
+                        <li>Programming Languages (COMPSCI 152)</li>
+                        <li>Introduction to Probability (STAT110)</li>
+                        <li>Data Science (COMPSCI 109)</li>
+                        <li>Computer Vision (COMPSCI 283)</li>
+                        <li>Visualization (COMPSCI 171)</li>
                         <li>Systems Programming and Machine Organization (COMPSCI 61)</li>
                         <li>Introduction to Computer Science II (COMPSCI 51)</li>
                         <li>Introduction to Computer Science I (COMPSCI 50)</li>
-                        <li>Introduction to Probability (STAT110)</li>
-                        <li>Introduction to Electrical Engineering (ES50)</li>
-                        <li>Compilers (COMPSCI 153)</li>
-                        <li>Data Science (COMPSCI 109)</li>
-                        <li>Computer Vision (COMPSCI 283)</li>
-                        <li>Data Systems (COMPSCI 165)</li>
-                        <li>Systems Development for Computational Science (COMPSCI 207)</li>
-                        <li>Visualization (COMPSCI 171)</li>
                         <li>Honors Linear Algebra and Real Analysis I (MATH 25a)</li>
+                        <li>Introduction to Electrical Engineering (ES50)</li>
                     </ul></p>
 
                   <h4>Costeas-Geitonas School, Greece</h4>
@@ -129,7 +131,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                   <h3>Skills & Interests</h3> 
                   <p><h4>Programming:</h4> C++, C, Objective-C, Python, PHP, JS, OCaml</p>
                   <p><h4>More Tools:</h4> MySQL, jQuery, GIT, LaTeX, Xcode, MATLAB</p>
@@ -145,20 +147,20 @@
         <div class="page" id="projects_page" hidden>
           <h1>Projects</h1>
           <div class="row">
-            <div class="col-md-4" class="thumbnail">
+            <div class="col-xs-4" class="thumbnail">
               <a href="https://github.com/spantela/stelladb" target="_blank" >
-                <img src="img/stelladb.png"/>
+                <img src="img/stelladb2.png"/>
               </a> <br><br>
               <div class="caption">Stella's DB</div>
             </div>
-            <div class="col-md-4" class="thumbnail">
+            <div class="col-xs-4" class="thumbnail">
               <a href="https://github.com/nathanielherman/fmmtl/tree/kdbtree" target="_blank" >
                 <img src="img/kdbtree.png"/>
               </a> <br><br>
               <div class="caption">KDBTree Implementation in C++</div>
             </div>
 
-            <div class="col-md-4" class="thumbnail">
+            <div class="col-xs-4" class="thumbnail">
               <a href="http://crimsoncommunity.herokuapp.com/" target="_blank" >
                 <img src="img/crimsoncommunity.png"/>
               </a> <br><br>
@@ -167,34 +169,35 @@
           </div>
           <br><br><br>
           <div class="row">
-            <div class="col-md-4" class="thumbnail">
+            <div class="col-xs-4" class="thumbnail">
               <a href="http://venngroups.herokuapp.com/" target="_blank" >
                 <img src="img/venngroups.png"/>
               </a> <br><br>
               <div class="caption">VennGroups: Scheduling for large groups made easy</div>
             </div>
-            <div class="col-md-4" class="thumbnail">
+            <div class="col-xs-4" class="thumbnail">
               <a href="http://spantela.github.io/facebook-visualization/" target="_blank" >
                 <img src="img/fcblikesvisualization.png"/>
               </a> <br><br>
               <div class="caption">Facebook Likes Visualization</div>
             </div>
-            <div class="col-md-4" class="thumbnail">
+            <div class="col-xs-4" class="thumbnail">
+              <a href="http://giftguru.herokuapp.com/" target="_blank" >
+                <img src="img/giftguru.png"/>
+              </a> <br><br>
+              <div class="caption">GiftGuru</div>
+            </div>
+
+          </div>
+          <br><br><br>
+          <div class="row">
+            <div class="col-xs-4" class="thumbnail">
               <a href="http://www.hcs.harvard.edu/~hchs/" target="_blank" >
                 <img src="img/hchs.png"/>
               </a> <br><br>
               <div class="caption">Harvard Hellenic Society</div>
             </div>
-          </div>
-          <br><br><br>
-          <div class="row">
-            <!-- <div class="col-md-4" class="thumbnail">
-              <a href="http://giftguru.herokuapp.com/" target="_blank" >
-                <img src="img/giftguru.png"/>
-              </a> <br><br>
-              <div class="caption">GiftGuru</div>
-            </div> -->
-            <div class="col-md-4" class="thumbnail">
+            <div class="col-xs-4" class="thumbnail">
               <a href="https://github.com/spantela/set" target="_blank" >
                 <img src="img/set.png"/>
               </a> <br><br>
