profile picture added

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
       <div class="wrapper">
         <hr>
         <div class="jumbotron page" id="about_page" hidden>
-        <div>
-          <!-- <img src="img/stella.png" alt="github" class="img-rounded pull-right"> -->
-          <h1>Hi there!</h1>
+        <div class="row">
+          <div class="col-xs-6"><h1>Hello World!</h1></div>
+          <div class="col-xs-6"><img src="img/stella.png" alt="github" class="img-rounded pull-right">
+</div>          
         </div> <br>
           <p class="lead">My name is Stella and I am a rising senior studying Computer Science at Harvard University. In the summer of 2014 I interned as a software engineer at <a href="http://www.wayfair.com/" target="_blank">Wayfair</a> and specifically in the Product Catalogue team. </p>
           <p> I am interested in big data systems and I love figuring out how things work, and perfecting all the tiny details that make a system awesome. To be more specific, I am extremely passionate about databases and in fact I implemented a modern column store database that supports file loading, column creation, inserts and updates and can be found <a href="https://github.com/spantela/stelladb">here</a>. </p>
