--- a/index.html
+++ b/index.html
@@ -134,12 +134,15 @@
                 <div class="col-xs-12">
                   <h3>Skills & Interests</h3> 
                   <p><h4>Programming:</h4> C++, C, Objective-C, Python, PHP, JS, OCaml</p>
-                  <p><h4>More Tools:</h4> MySQL, jQuery, GIT, LaTeX, Xcode, MATLAB</p>
+                  <p><h4>More Tools:</h4> MSSQL, MySQL, GIT, LaTeX, Xcode, MATLAB</p>
+                  <p><h4>Frameworks:</h4> Django, Flask, Angular.js, Laravel, CodeIgniter</p>
+                  <p><h4>Libraries:</h4>jQuery, d3, Bootstrap</p>
                   <p><h4>Languages:</h4> English (fluent), Modern Greek (native), French (working proficiency)</p>
-                  <p><h4>Research Interests:</h4>Data Systems, Distributed Systems</p>
-                  <p><h4>General Interests:</h4>Technology, Startups, Board games, Literature, Theatre, Table Tennis</p>
+                  <p><h4>Research Interests:</h4>Data Systems and Tools</p>
+                  <p><h4>General Interests:</h4>Technology, Startups, Boardgames, Literature, Theatre, Table Tennis</p>
                   </div>
               </div>
+             
             </div>
           </div>
         </div>
