--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li id="about_nav" class="active"><a href="#about">About</a></li>
           <li id="resume_nav"><a href="#resume">Resume</a></li>
           <li id="projects_nav"><a href="#projects">Projects</a></li>
+          <li id="notes_nav"><a href="#notes">Notes</a></li>
         </ul>
         <h3 class="text-muted">Styliani (Stella) Pantela</h3>
       </div>
@@ -207,6 +208,16 @@
               <div class="caption">iPhone App for Set</div>
             </div>
           </div>
+        </div>
+        <div class="page" id="notes_page" hidden>
+          <h4>This is a collection of my notes from Tech talks. Enjoy!</h4>
+          <p>Grace Hopper Celebration 2014</p>
+          <ul>
+            <li><a href="http://goo.gl/LCkv5i" target="_blank">Latest Trends and Technical Challenges of Big Data Analytics, Grace Hopper Celebration 2014 </a></li>  
+            <li><a href="http://goo.gl/fuQTDF" target="_blank">Best of ACM SIG's: SIGMOD & CHI, Jennifer Widom, Grace Hopper Celebration 2014 </a></li>  
+            <li><a href="http://goo.gl/XeAQls" target="_blank">Software Engineering: Multiple Presentations, Grace Hopper Celebration 2014 </a></li>
+          </ul>
+          
         </div>
         <div class="page" id="quotes_page" hidden>
         In most cases, people, even wicked people, are far more naive and simple-hearted than one generally assumes. And so are we.
