google mesa note

--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
         </div>
         <div class="page" id="notes_page" hidden>
           <h4>This is a collection of my notes from Tech talks. Enjoy!</h4>
+          <p>Tech Talks @ Harvard 2014</p>
+          <ul>
+            <li><a href="http://goo.gl/daGJZl" target="_blank">Mesa: Geo-Replicated, Near Real-Time, Scalable Data Warehousing</a></li>  
+          </ul>
           <p>Grace Hopper Celebration 2014</p>
           <ul>
             <li><a href="http://goo.gl/LCkv5i" target="_blank">Latest Trends and Technical Challenges of Big Data Analytics, Grace Hopper Celebration 2014 </a></li>  
