--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <br>
       <div class="wrapper">
         <hr>
-        <div class="jumbotron page" id="about_page" hidden>
+        <div class="jumbotron page" id="about_page">
         <div class="row">
           <div class="col-xs-6"><h1>Hello World!</h1></div>
           <div class="col-xs-6"><img src="img/stella.png" alt="github" class="img-rounded pull-right">
@@ -228,8 +228,9 @@
 ― Fyodor Dostoyevsky, The Brothers Karamazov 
         </div>
         
-        <hr>
+        
         <div class="footer" align="center" hidden>
+          <hr>
           <p>&copy; 2014.</p>
         </div>
       </div> <!-- /container -->
