--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="page" id="resume_page" hidden>
           <div class="row">
-            <div class="col-xs-7"> 
+            <div class="col-xs-7 text-justify"> 
               <div class="row">
                 <div class="col-xs-12">
                   <h3>Tech Experience</h3>
@@ -96,9 +96,21 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-1">
-            </div>
-            <div class="col-xs-4"> 
+            <!-- <div class="col-xs-1"> -->
+            <!-- </div> -->
+            <div class="col-xs-5"> 
+            <div class="row">
+                <div class="col-xs-12">
+                  <h3>Skills & Interests</h3> 
+                  <p><h4>Programming:</h4> C++, C, Objective-C, Python, PHP, JS, OCaml</p>
+                  <p><h4>More Tools:</h4> MSSQL, MySQL, GIT, LaTeX, Xcode, MATLAB</p>
+                  <p><h4>Frameworks:</h4> Django, Flask, Angular.js, Laravel, CodeIgniter</p>
+                  <p><h4>Libraries:</h4>jQuery, d3, Bootstrap</p>
+                  <p><h4>Languages:</h4> English (fluent), Modern Greek (native), French (working proficiency)</p>
+                  <p><h4>Research Interests:</h4>Data Systems, Databases, Data Infrastructure</p>
+                  <p><h4>General Interests:</h4>Technology, Startups, Boardgames, Literature, Theatre, Table Tennis</p>
+                  </div>
+              </div>
               <div class="row">
                 <div class="col-xs-12">
                   <h3>Education</h3>
@@ -133,18 +145,7 @@
                   <p>Gold medalist in national math olympiads. Silver and bronze medalist in balkan and mediterannean olympiads.</p>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-xs-12">
-                  <h3>Skills & Interests</h3> 
-                  <p><h4>Programming:</h4> C++, C, Objective-C, Python, PHP, JS, OCaml</p>
-                  <p><h4>More Tools:</h4> MSSQL, MySQL, GIT, LaTeX, Xcode, MATLAB</p>
-                  <p><h4>Frameworks:</h4> Django, Flask, Angular.js, Laravel, CodeIgniter</p>
-                  <p><h4>Libraries:</h4>jQuery, d3, Bootstrap</p>
-                  <p><h4>Languages:</h4> English (fluent), Modern Greek (native), French (working proficiency)</p>
-                  <p><h4>Research Interests:</h4>Data Systems and Tools</p>
-                  <p><h4>General Interests:</h4>Technology, Startups, Boardgames, Literature, Theatre, Table Tennis</p>
-                  </div>
-              </div>
+              
              
             </div>
           </div>
