resume and front page updates

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
             </div>          
           </div> 
           <br>
-          <p class="lead">My name is Stella and I am a rising senior studying Computer Science at Harvard University. In the summer of 2014 I interned as a software engineer at <a href="http://www.wayfair.com/" target="_blank">Wayfair</a> and specifically in the Product Catalogue team. </p>
-          <p> I am interested in big data systems and I love figuring out how things work, and perfecting all the tiny details that make a system awesome. To be more specific, I am extremely passionate about databases and in fact I implemented a modern column store database that supports file loading, column creation, inserts and updates and can be found <a href="https://github.com/spantela/stelladb">here</a>. </p>
-          <p> Checkout my github if you are interested in cool projects and connect with me on LinkedIn.</p>
+          <p class="lead">My name is Stella and I am a senior studying Computer Science at Harvard University. I am interested in big data systems and I love figuring out how things work, and perfecting all the tiny details of a system. My main interests lie in the world of databases. As part of my class on data systems, I implemented a modern column store database that supports file loading, column creation, inserts and updates and can be found <a href="https://github.com/spantela/stelladb">here</a> from scratch in C.</p>
+          <p>I am currently a undergraduate researcher at the <a href="http://daslab.seas.harvard.edu" target="_blank">DASlab</a> working with Professor <a href="http://stratos.seas.harvard.edu" target="_blank">Stratos Idreos</a>. In the past I interned as a software engineer at <a href="http://www.wayfair.com/" target="_blank">Wayfair</a> in the Product Catalogue team and got my hands dirty with cool optimization problems in data processing.</p>
+          
+          <p> Checkout my github if you are interested in past projects I have worked on and connect with me on LinkedIn.</p>
 
           <div align="center">
           <a href="https://github.com/spantela" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github" class="img-circle"></a>
@@ -64,6 +65,9 @@
               <div class="row">
                 <div class="col-xs-12">
                   <h3>Tech Experience</h3>
+                  <h4>DASlab, Harvard SEAS <p class="pull-right">Cambridge, MA.</p></h4>
+                  <p>Undergraduate Researcher</p> 
+                  <div>Conducting research with Professor <a href="http://stratos.seas.harvard.edu" target="_blank">Stratos Idreos</a> on efficient just-in-time compilation in modern query execution engines.<strong class="pull-right">Oct 2014 - Present</strong></div><br>
                   <h4>Wayfair <p class="pull-right">Boston, MA.</p></h4>
                   <p>Software Engineering Intern</p> 
                   <div>Created four loaders for inserting different types of data in the data system while optimizing run times. Worked with MSSQL, PHP, JS, CSS and GIT. Won the Most Ingenious award at the Wayfair 2014 Hackathon. Named Campus Ambassador for Harvard University for 2014. <strong class="pull-right">Jun 2014 - Aug 2014</strong></div><br>
@@ -240,6 +244,29 @@
         ― Νίκος Καζαντζάκης<br><br>
         Η στερνή, η πιο ιερή μορφή θεωρίας είναι η πράξη.<br>
         ― Νίκος Καζαντζάκης<br><br>
+        Τι συμφορά, ενώ είσαι καμωμένος<br>
+        για τα ωραία και μεγάλα έργα<br>
+        η άδικη αυτή σου η τύχη πάντα<br>
+        ενθάρρυνσι κ’ επιτυχία να σε αρνείται·<br>
+        να σ’ εμποδίζουν ευτελείς συνήθειες,<br>
+        και μικροπρέπειες, κι αδιαφορίες.<br>
+        Και τι φρικτή η μέρα που ενδίδεις,<br>
+        (η μέρα που αφέθηκες κ’ ενδίδεις),<br>
+        και φεύγεις οδοιπόρος για τα Σούσα,<br>
+        και πηαίνεις στον μονάρχην Aρταξέρξη<br>
+        που ευνοϊκά σε βάζει στην αυλή του,<br>
+        και σε προσφέρει σατραπείες και τέτοια.<br>
+        Και συ τα δέχεσαι με απελπισία<br>
+        αυτά τα πράγματα που δεν τα θέλεις.<br>
+        Άλλα ζητεί η ψυχή σου, γι’ άλλα κλαίει·<br>
+        τον έπαινο του Δήμου και των Σοφιστών,<br>
+        τα δύσκολα και τ’ ανεκτίμητα Εύγε·<br>
+        την Aγορά, το Θέατρο, και τους Στεφάνους.<br>
+        Aυτά πού θα σ’ τα δώσει ο Aρταξέρξης,<br>
+        αυτά πού θα τα βρεις στη σατραπεία·<br>
+        και τι ζωή χωρίς αυτά θα κάμεις. <br>
+        ― Σατραπεία, Κωνσταντίνος Καβάφης<br><br>
+
         </div>
         
         <div class="footer" align="center" hidden>
