--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@
         ― Fyodor Dostoyevsky, The Brothers Karamazov  <br><br>
         One day we lose the person we love. Anyone who is unable to sustain that loss fails as a human being and does not deserve our sympathy.<br>
         ― Sandor Marai, Embers<br><br>
+        In the midst of winter, I found there was, within me, an invincible summer.<br>
+        ― Albert Camus, Return to Tipase (published in the Myth of Sisyphus)<br><br>
         <h5>Greek</h5>
         Ό,τι δεν συνέβη ποτέ, είναι ό,τι δεν ποθήσαμε αρκετά.<br>
         ― Νίκος Καζαντζάκης<br><br>
