--- a/index.html
+++ b/index.html
@@ -240,35 +240,15 @@
         One day we lose the person we love. Anyone who is unable to sustain that loss fails as a human being and does not deserve our sympathy.<br>
         ― Sandor Marai, Embers<br><br>
         In the midst of winter, I found there was, within me, an invincible summer.<br>
-        ― Albert Camus, Return to Tipase (published in the Myth of Sisyphus)<br><br>
+        ― Albert Camus, Return to Tipasa (published in the Myth of Sisyphus)<br><br>
         <h5>Greek</h5>
         Ό,τι δεν συνέβη ποτέ, είναι ό,τι δεν ποθήσαμε αρκετά.<br>
         ― Νίκος Καζαντζάκης<br><br>
         Η στερνή, η πιο ιερή μορφή θεωρίας είναι η πράξη.<br>
         ― Νίκος Καζαντζάκης<br><br>
-        Τι συμφορά, ενώ είσαι καμωμένος<br>
-        για τα ωραία και μεγάλα έργα<br>
-        η άδικη αυτή σου η τύχη πάντα<br>
-        ενθάρρυνσι κ’ επιτυχία να σε αρνείται·<br>
-        να σ’ εμποδίζουν ευτελείς συνήθειες,<br>
-        και μικροπρέπειες, κι αδιαφορίες.<br>
-        Και τι φρικτή η μέρα που ενδίδεις,<br>
-        (η μέρα που αφέθηκες κ’ ενδίδεις),<br>
-        και φεύγεις οδοιπόρος για τα Σούσα,<br>
-        και πηαίνεις στον μονάρχην Aρταξέρξη<br>
-        που ευνοϊκά σε βάζει στην αυλή του,<br>
-        και σε προσφέρει σατραπείες και τέτοια.<br>
-        Και συ τα δέχεσαι με απελπισία<br>
-        αυτά τα πράγματα που δεν τα θέλεις.<br>
-        Άλλα ζητεί η ψυχή σου, γι’ άλλα κλαίει·<br>
-        τον έπαινο του Δήμου και των Σοφιστών,<br>
-        τα δύσκολα και τ’ ανεκτίμητα Εύγε·<br>
-        την Aγορά, το Θέατρο, και τους Στεφάνους.<br>
-        Aυτά πού θα σ’ τα δώσει ο Aρταξέρξης,<br>
-        αυτά πού θα τα βρεις στη σατραπεία·<br>
-        και τι ζωή χωρίς αυτά θα κάμεις. <br>
-        ― Σατραπεία, Κωνσταντίνος Καβάφης<br><br>
-
+        Σαν τη λογιάζεις μια δουλειά, όρτσα και μη φοβάσαι<br>
+        αμόλα τη, τη νιότη σου και μην τηνε λυπάσαι.<br>
+        ― Κρητική Μαντινάδα<br><br>
         </div>
         
         <div class="footer" align="center" hidden>
