--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
         </div>
         <div class="page" id="notes_page" hidden>
           <h4>This is a collection of my notes from Tech talks. Enjoy!</h4>
+          <p>ComputeFest 2015</p>
+          <ul>
+            <li><a href="https://docs.google.com/document/d/11t_2DRN-6Km5FxRRqDeGGNdHU5sENjKsr6z540HYz1s/edit?usp=sharing" target="_blank">Deep Learning with Theano and Pylearn2 - Part 1, Verena Kaynig & Ray Jones</a></li>  
+          </ul>
           <p>Tech Talks @ Harvard 2014</p>
           <ul>
             <li><a href="http://goo.gl/daGJZl" target="_blank">Mesa: Geo-Replicated, Near Real-Time, Scalable Data Warehousing</a></li>  
