--- a/index.html
+++ b/index.html
@@ -222,9 +222,10 @@
           <ul>
             <li><a href="https://docs.google.com/document/d/11t_2DRN-6Km5FxRRqDeGGNdHU5sENjKsr6z540HYz1s/edit?usp=sharing" target="_blank">Deep Learning with Theano and Pylearn2 - Part 1, Verena Kaynig & Ray Jones</a></li>  
           </ul>
-          <p>Tech Talks @ Harvard 2014</p>
+          <p>Tech Talks @ Harvard 2014-2015</p>
           <ul>
-            <li><a href="http://goo.gl/daGJZl" target="_blank">Mesa: Geo-Replicated, Near Real-Time, Scalable Data Warehousing</a></li>  
+            <li><a href="https://docs.google.com/document/d/1zHWtLhWuvjnKS_unbaEue1cenojZMPaYyQzIx90KBZk/edit?usp=sharing" target="_blank">Collaborative Web Search: Towards Next-Generation Information-Seeking Experiences</a></li>
+            <li><a href="http://goo.gl/daGJZl" target="_blank">Mesa: Geo-Replicated, Near Real-Time, Scalable Data Warehousing</a></li>
           </ul>
           <p>Grace Hopper Celebration 2014</p>
           <ul>
