--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="row">
             <div class="col-xs-8">
               <p class="lead">I am a recent Computer Science graduate from Harvard University. In the summer of 2014 I interned as a software engineer at <a href="http://www.wayfair.com/" target="_blank">Wayfair</a> and specifically in the Product Catalogue team and got my hands dirty with creating tools for handling big data. As part of my class on data systems, I implemented a modern column store database that supports file loading, column creation, inserts and updates and can be found <a href="https://github.com/spantela/stelladb">here</a>. It is implemented from scratch in C. I was also an undergraduate researcher at the <a href="http://daslab.seas.harvard.edu" target="_blank">DASlab</a> working with Professor <a href="http://stratos.seas.harvard.edu" target="_blank">Stratos Idreos</a>.</p>
-              <p> Checkout my github if you are interested in past projects I have worked on and connect with me on LinkedIn. For more details also take a look at my  <a href="https://github.com/spantela/Resume_website.pdf" target="_blank">Resume</a>.
+              <p> Checkout my github if you are interested in past projects I have worked on and connect with me on LinkedIn. For more details also take a look at my  <a href="Resume_website.pdf" target="_blank">Resume</a>.
             </div>
             <div class="col-xs-4"><img src="img/stella.jpg" alt="github" class="img-rounded pull-right"></div>
           </div>
