--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="styliani pantela stella profile harvard" name="description">
-    <meta name="apple-mobile-web-app-title" content="Roger Zurawicki - Portfolio">
+    <meta name="apple-mobile-web-app-title" content="Styliani Pantela - Portfolio">
     <meta content=" " name="author">
     <!-- <link href="../../assets/ico/favicon.ico" rel="shortcut icon"> -->
     <title>Styliani (Stella) Pantela</title>
