--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li id="about_nav" class="active"><a href="#about">About</a></li>
-          <!-- <li id="resume_nav"><a href="#resume">Resume</a></li> -->
           <li id="projects_nav"><a href="#projects">Projects</a></li>
           <li id="notes_nav"><a href="#notes">Notes</a></li>
           <li id="other_nav"><a href="#other">Other</a></li>
@@ -57,104 +56,6 @@
           <div class="row" align="center">
             <a href="https://github.com/spantela" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github" class="img-circle"></a>
             <a href="http://www.linkedin.com/in/stylianipantela/" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
-          </div>
-        </div>
-
-
-        <div class="page" id="resume_page" hidden>
-          <div class="row">
-            <div class="col-xs-7 text-justify">
-              <div class="row">
-                <div class="col-xs-12">
-                  <h3>Tech Experience</h3>
-                  <h4>DASlab, Harvard SEAS <p class="pull-right">Cambridge, MA.</p></h4>
-                  <p>Undergraduate Researcher</p>
-                  <div>Conducting research with Professor <a href="http://stratos.seas.harvard.edu" target="_blank">Stratos Idreos</a> on efficient just-in-time compilation in modern query execution engines.<strong class="pull-right">Oct 2014 - Present</strong></div><br>
-                  <h4>Wayfair <p class="pull-right">Boston, MA.</p></h4>
-                  <p>Software Engineering Intern</p>
-                  <div>Created four loaders for inserting different types of data in the data system while optimizing run times. Worked with MSSQL, PHP, JS, CSS and GIT. Won the Most Ingenious award at the Wayfair 2014 Hackathon. Named Campus Ambassador for Harvard University for 2014. <strong class="pull-right">Jun 2014 - Aug 2014</strong></div><br>
-                  <h4>GiftGuru <p class="pull-right">Cambridge, MA.</p></h4>
-                  <p>Co-Founder & Lead Software Engineer</p>
-                  <div>Developed from scratch a gift recommendation platform that imports likes from social network profiles and generates gifts in e-commerce websites like Amazon. Used Python & Flask and Angular.js. Won the HackBeanPot 2014 Best application to simplify the business of life award, sponsored by Intuit. Named Semi-Finalist for Harvard’s i3 Challenge. <strong class="pull-right">Jan 2014 - Present</strong></div><br>
-                  <h4>Harvard/Indian Institute of Science <p class="pull-right">Bangalore, India.</p></h4>
-                  <p>Engineering Researcher</p>
-                  <div>Performed research for the Medical Innovation for Low-Resource Global Markets group under the supervision of Professor Conor Walsh from Harvard SEAS. Developed a prototype for a low cost, manually operated suction device. Selected for the David Rockefeller Grant. <strong class="pull-right">Jun 2013 - Aug 2013</strong></div><br>
-                  <h4>Department of Computer Science, SEAS <p class="pull-right">Cambridge, MA.</p></h4>
-                  <p>CS51 Teaching Fellow</p>
-                  <div>Lead weekly 1.5-hour sections, covering functional and object oriented programming, recursion, abstraction, complexity, module and object abstraction, unit testing and design patterns. Graded problem sets and final projects. Staffed office hours. <strong class="pull-right">Jan 2013 - May 2013</strong></div><br>
-                  <h4>Vithoulkas Compass <p class="pull-right">Athens, Greece.</p></h4>
-                  <p>Software Engineering Intern</p>
-                  <div>Developed features for the web platform using PHP, JS, Ajax, and jQuery. Resolved bugs. Implemented unit tests for the front end using SELENIUM.<strong class="pull-right">May 2012 - Jul 2012</strong></div><br>
-                  <h4>Massachusetts Institute of Technology <p class="pull-right">Cambridge, MA.</p></h4>
-                  <p>Mathematics Researcher</p>
-                  <div>Mathematics paper titled “On certain Subsequences of Fibonacci Numbers”, 2010. Received most original paper award at the 2011 ACSTAC (Greek mathematics conference). <strong class="pull-right">Jun 2010 - Aug 2010</strong></div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-xs-12">
-                  <h3>Leadership Experience</h3>
-                  <h4>Harvard College Hellenic Society <p class="pull-right">Cambridge, MA.</p></h4>
-                  <p>President</p>
-                  <div>Introduced a series of talks related to Greece by Harvard Professors. Organized the first Repower Greece Conference hosted at Harvard University (>120 attendants). Revamped the website of the society and raised funds for traditional dance costumes. <strong class="pull-right">Sep 2011 - Present</strong></div>
-                   <h4>Crimson Community <p class="pull-right">Cambridge, MA.</p></h4>
-                  <p>Co-Founder</p>
-                  <div>Designed and developed a mental health awareness and access app for the Harvard Community. Using the Twilio API, the app enables easier to access mental health resources and starts to lift the stigma on mental illness. <strong class="pull-right">Jan 2013 - Present</strong></div>
-                </div>
-              </div>
-            </div>
-            <!-- <div class="col-xs-1"> -->
-            <!-- </div> -->
-            <div class="col-xs-5">
-            <div class="row">
-                <div class="col-xs-12">
-                  <h3>Skills & Interests</h3>
-                  <p><h4>Programming:</h4> C++, C, Objective-C, Python, PHP, JS, OCaml</p>
-                  <p><h4>More Tools:</h4> MSSQL, MySQL, GIT, LaTeX, Xcode, MATLAB</p>
-                  <p><h4>Frameworks:</h4> Django, Flask, Angular.js, Laravel, CodeIgniter</p>
-                  <p><h4>Libraries:</h4>jQuery, d3, Bootstrap</p>
-                  <p><h4>Languages:</h4> English (fluent), Modern Greek (native), French (working proficiency)</p>
-                  <p><h4>Research Interests:</h4>Data Systems, Databases, Data Infrastructure</p>
-                  <p><h4>General Interests:</h4>Technology, Startups, Boardgames, Literature, Theatre, Table Tennis</p>
-                  </div>
-              </div>
-              <div class="row">
-                <div class="col-xs-12">
-                  <h3>Education</h3>
-                  <h4>Harvard University, USA</h4>
-                  <p>Sep 2011 - Present</p>
-                  <p>A.B. in Computer Science</p>
-                  <p>Courses:
-                    <ul>
-                        <li>Big Data Systems (COMPSCI 265)</li>
-                        <li>Systems Development for Computational Science (COMPSCI 207)</li>
-                        <li>Computational Linguistics (COMPSCI 187)</li>
-                        <li>Data Systems (COMPSCI 165)</li>
-                        <li>Mobile Software Engineering (COMPSCI 164)</li>
-                        <li>Operating Systems (COMPSCI 161)</li>
-                        <li>Systems Programming and Machine Organization (COMPSCI 61)</li>
-                        <li>Compilers (COMPSCI 153)</li>
-                        <li>Programming Languages (COMPSCI 152)</li>
-                        <li>Algorithms and Data Structures (COMPSCI 124)</li>
-                        <li>Introduction to the Theory of Computation (COMPSCI 121)</li>
-                        <li>Introduction to Probability (STAT110)</li>
-                        <li>Data Science (COMPSCI 109)</li>
-                        <li>Computer Vision (COMPSCI 283)</li>
-                        <li>Visualization (COMPSCI 171)</li>
-                        <li>Introduction to Computer Science II (COMPSCI 51)</li>
-                        <li>Introduction to Computer Science I (COMPSCI 50)</li>
-                        <li>Honors Linear Algebra and Real Analysis I (MATH 25a)</li>
-                        <li>Introduction to Electrical Engineering (ES50)</li>
-                    </ul></p>
-
-                  <h4>Costeas-Geitonas School, Greece</h4>
-                  <p>Sep 2009 - May 2011</p>
-                  <p>International Baccalaureate | Valedictorian</p>
-                  <p>Gold medalist in national math olympiads. Silver and bronze medalist in balkan and mediterannean olympiads.</p>
-                  <p>President of the Math Club.</p>
-                  <p>President of the Model United Nations Club.</p>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
 
@@ -260,15 +161,17 @@
         ― Κρητική Μαντινάδα<br><br>
         Μια ανεξερεύνητη ζωή, δεν αξίζει να τη ζεις.<br>
         ― Σωκράτης<br><br>
-
+<!--
       <h3>Map of the countries I have been to - grey is for countries I want to visit :)</h3>
-      <!-- Map of the world -->
+      <!-- Map of the world
       <script src="http://cdn.amcharts.com/lib/3/ammap.js" type="text/javascript"></script>
       <script src="http://cdn.amcharts.com/lib/3/maps/js/worldHigh.js" type="text/javascript"></script>
       <script src="http://cdn.amcharts.com/lib/3/themes/dark.js" type="text/javascript"></script>
       <script type="text/javascript" src="js/map.js"></script>
       <div id="mapdiv" style="width: 1000px; height: 700px;"></div>
-      <div style="width: 1000px; font-size: 70%; padding: 5px 0; text-align: center; background-color: #535364; margin-top: 1px; color: #B4B4B7;"><a href="http://www.amcharts.com/visited_countries/" style="color: #B4B4B7;">Create your own visited countries map</a> or check out the <a href="http://www.amcharts.com/" style="color: #B4B4B7;">JavaScript Charts</a>.</div>
+      <div style="width: 1000px; font-size: 70%; padding: 5px 0; text-align: center; background-color: #535364; margin-top: 1px; color: #B4B4B7;"><a href="http://www.amcharts.com/visited_countries/" style="color: #B4B4B7;">Create your own visited countries map</a> or check out the <a href="http://www.amcharts.com/" style="color: #B4B4B7;">JavaScript Charts</a>.</div> -->
+
+
         </div>
 
         <div class="footer" align="center" hidden>
