--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <li id="about_nav" class="active"><a href="#about">About</a></li>
           <li id="projects_nav"><a href="#projects">Projects</a></li>
           <li id="notes_nav"><a href="#notes">Notes</a></li>
+          <li><a href="http://stylianipantela.github.io/blog">Blog</a></li>
           <li id="other_nav"><a href="#other">Other</a></li>
         </ul>
         <h3 class="text-muted">Styliani Pantela</h3>
