--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
         </div>
         <div class="page" id="notes_page" hidden>
           <h4>This is a collection of my notes. Enjoy!</h4>
+          <p>Fall 2015</p>
+          <ul>
+            <li><a href="https://docs.google.com/document/d/1izhmO7CxW2rY5rQzbF0NOO7TQLWYIXdK1wolP4-Y0Fg/edit?usp=sharing" target="_blank">Boston Hadoop User Group: PRESTO, an Open Source SQL Engine for Big Data</a></li>
+          </ul>
           <p>ComputeFest 2015</p>
           <ul>
             <li><a href="https://docs.google.com/document/d/11t_2DRN-6Km5FxRRqDeGGNdHU5sENjKsr6z540HYz1s/edit?usp=sharing" target="_blank">Deep Learning with Theano and Pylearn2 - Part 1, Verena Kaynig & Ray Jones</a></li>
